task 9 files uploaded

--- a/myfirst/locations/templates/locations/url_arguments.html
+++ b/myfirst/locations/templates/locations/url_arguments.html
@@ -1,10 +1,10 @@
-{%extends 'locations/base_locations.html'%}
+{%extends 'locations/base.html'%}
 
 
 
 {%block content%}
-<div class="text-center"> <!-- Testing if bootstrap.css static file connected in base template -->
-    <h3>This is template for localhost:port/locations/argument</h3>
+<div style="margin-top: 15%;" class="text-center"> <!-- Testing if bootstrap.css static file connected in base template -->
+    <h3 class>This is template for localhost:port/locations/argument</h3>
 
     <h6> Your URL argument is --> <b>{{argument}}</b> </h6>
 </div>
