task_10 files uploaded

--- a/myfirst/locations/templates/locations/city.html
+++ b/myfirst/locations/templates/locations/city.html
@@ -4,12 +4,15 @@
 {{argument}} info
 {%endblock%}
 
+
 {%block content%}
 
 <div style="margin-top: 175px;" class=" text-center container"> <!-- Testing if bootstrap.css static file connected in base template -->
     City: {{city.name}}<br>
     Country: {{city.county}} <br>
-    <a style="margin-top: 25px" class="btn btn-danger" href="/locations/dropcity={{city.name}}">Delete </a>
+
+    <a style="margin-top: 25px; margin-right:15px;" class="btn btn-danger" href="/locations/dropcity={{city.name}}">Delete</a><a
+            href="/locations/editcity_id={{city.id}}" style="margin-top: 25px; margin-left: 15px" class="btn btn-info">Edit</a>
 
 </div>
 
