task_12 files uploaded

--- a/myfirst/locations/templates/locations/countries.html
+++ b/myfirst/locations/templates/locations/countries.html
@@ -5,6 +5,7 @@ Countries
 {%endblock%}
 
 {%block content%}
+<div class="text-center" style="margin-top: 50px;" ><p><a href="/locations/newsymbol" class="btn btn-success" >Add new country</a></p></div>
 
 <div style="margin-top: 75px;" class="container"> <!-- Testing if bootstrap.css static file connected in base template -->
 
