--- a/myfirst/locations/templates/locations/city.html
+++ b/myfirst/locations/templates/locations/city.html
@@ -1,7 +1,7 @@
 {%extends 'locations/base.html'%}
 
 {%block page_title%}
-{{argument}} info
+{{city.name}} info
 {%endblock%}
 
 
@@ -12,7 +12,7 @@
     Country: {{city.county}} <br>
 
     <a style="margin-top: 25px; margin-right:15px;" class="btn btn-danger" href="/locations/dropcity={{city.name}}">Delete</a><a
-            href="/locations/editcity_id={{city.id}}" style="margin-top: 25px; margin-left: 15px" class="btn btn-info">Edit</a>
+            href="/locations/editcity/{{city.id}}" style="margin-top: 25px; margin-left: 15px" class="btn btn-info">Edit</a>
 
 </div>
 
